tests/ui/std-uncopyable-atomics.stderr
error[E0507]: cannot move out of a shared reference
  --> $DIR/std-uncopyable-atomics.rs:9:13
   |
LL |     let x = *&x;
   |             ^^^ move occurs because value has type `std::prelude::rust_2021::AtomicBool`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     let x = *&x;
LL +     let x = &x;
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/std-uncopyable-atomics.rs:11:13
   |
LL |     let x = *&x;
   |             ^^^ move occurs because value has type `std::prelude::rust_2021::AtomicIsize`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     let x = *&x;
LL +     let x = &x;
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/std-uncopyable-atomics.rs:13:13
   |
LL |     let x = *&x;
   |             ^^^ move occurs because value has type `std::prelude::rust_2021::AtomicUsize`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     let x = *&x;
LL +     let x = &x;
   |

error[E0507]: cannot move out of a shared reference
  --> $DIR/std-uncopyable-atomics.rs:15:13
   |
LL |     let x = *&x;
   |             ^^^ move occurs because value has type `std::prelude::rust_2021::AtomicPtr<usize>`, which does not implement the `Copy` trait
   |
help: consider removing the dereference here
   |
LL -     let x = *&x;
LL +     let x = &x;
   |

error: aborting due to 4 previous errors

For more information about this error, try `rustc --explain E0507`.
